2.8 blender exit after particular event using short key #53647

Closed
opened 2017-12-28 10:36:26 +01:00 by Ivaylo Gogov · 6 comments

System Information
Windows 10, Nvidia GTX 2 x 1050 Ti

Blender Version
branch:2.8; bd80ace /2017-12-26

Short description of error

  • blender exit after particular event using short key

Exact steps for others to reproduce the error

  • I create a plane in any render mode in Blender, then I press "x" for delete the plane, then blender crass
    crash_01.blend
**System Information** Windows 10, Nvidia GTX 2 x 1050 Ti **Blender Version** branch:2.8; bd80ace /2017-12-26 **Short description of error** - blender exit after particular event using short key **Exact steps for others to reproduce the error** - I create a plane in any render mode in Blender, then I press "x" for delete the plane, then blender crass [crash_01.blend](https://archive.blender.org/developer/F1559475/crash_01.blend)
Author

Added subscriber: @IvayloGogov

Added subscriber: @IvayloGogov
Member

Added subscribers: @dfelinto, @lichtwerk

Added subscribers: @dfelinto, @lichtwerk
Member

I can confirm this, crashes in outliner_build_tree() if the outliner is set to "Active" -- and there is no active object anymore after deletion...
Something like this prevents the crash
P584: #53647 prevent crash



diff --git a/source/blender/editors/space_outliner/outliner_tree.c b/source/blender/editors/space_outliner/outliner_tree.c
index a9c9ab74970..5130fdc3611 100644
--- a/source/blender/editors/space_outliner/outliner_tree.c
+++ b/source/blender/editors/space_outliner/outliner_tree.c
@@ -1959,7 +1959,9 @@ void outliner_build_tree(Main *mainvar, Scene *scene, ViewLayer *view_layer, Spa
 	}
 	else {
 		ten = outliner_add_element(soops, &soops->tree, OBACT(view_layer), NULL, 0, 0);
-		ten->directdata = BASACT(view_layer);
+		if (ten) {
+			ten->directdata = BASACT(view_layer);
+		}
 	}
 
 	if ((soops->flag & SO_SKIP_SORT_ALPHA) == 0) {

maybe @dfelinto can have a look?

I can confirm this, crashes in outliner_build_tree() if the outliner is set to "Active" -- and there is no active object anymore after deletion... Something like this prevents the crash [P584: #53647 prevent crash](https://archive.blender.org/developer/P584.txt) ``` diff --git a/source/blender/editors/space_outliner/outliner_tree.c b/source/blender/editors/space_outliner/outliner_tree.c index a9c9ab74970..5130fdc3611 100644 --- a/source/blender/editors/space_outliner/outliner_tree.c +++ b/source/blender/editors/space_outliner/outliner_tree.c @@ -1959,7 +1959,9 @@ void outliner_build_tree(Main *mainvar, Scene *scene, ViewLayer *view_layer, Spa } else { ten = outliner_add_element(soops, &soops->tree, OBACT(view_layer), NULL, 0, 0); - ten->directdata = BASACT(view_layer); + if (ten) { + ten->directdata = BASACT(view_layer); + } } if ((soops->flag & SO_SKIP_SORT_ALPHA) == 0) { ``` maybe @dfelinto can have a look?

This issue was referenced by f2a24afe8c

This issue was referenced by f2a24afe8c1aa0221b378585e3c1901cc568a6d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Done, @lichtwerk thanks for nailing the issue down.

Done, @lichtwerk thanks for nailing the issue down.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53647
No description provided.