Fix T53647: Outliner crashes when active object is deleted

Based on patch by Philipp Oeser (lichtwerk).